tests/sumo/errors/person/vehicle_as_person/errors.sumo
Warning: Vehicle type 'pseudoPerson' with vClass=pedestrian should only be used for persons and not for vehicle 'p1'.
